Open source link
(1) HTML: Add link to bottom of project for Github source code
(2)  CSS: Format link size and text decoration - 10px, underline upon hover

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <p>
    Last updated: <span id="current-date">Now</span>
       </p>
+      <p class="open-source"><a href="https://github.com/nlparker25/weather-app">Open source code</a> by Nicole Parker</p>
       </div>
     </div>
     <script src=jss\index.js></script>
