--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="heading">
         <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-zero-icon" />
         <h1 id=city-name>Atlanta</h1>
-        <h2><span id = "day-zero-temperature">73°F</span></h2>
+        <h2><span id = "day-zero-temperature">73</span><span class="unit-conversion"> <a href="#" id="c-conversion" class="active">°C</a> | <a href="#" id="f-conversion">°F</a></span></h2>
           <div class="weather-details">
           <span id="day-zero-description">Cloudy</span>
           <br>
