--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="weather-details">
           <span id="day-zero-description">Cloudy</span>
           <br>
-          Wind speed: <span id="day-zero-wind-speed">1 km/h</span>
+          Wind: <span id="day-zero-wind-speed">1 km/h</span>
           <br>
           Humidity: <span id="day-zero-humidity">50%</span>
           </div>
