--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="heading">
         <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-zero-icon" />
         <h1 id=city-name>Atlanta</h1>
-        <h2><span id = "day-zero-temperature">73</span><span class="unit-conversion"> <a href="#" id="c-conversion" class="active">°C</a> | <a href="#" id="f-conversion">°F</a></span></h2>
+        <h2><span id = "day-zero-temperature">10</span><span class="unit-conversion"> <a href="#" id="c-conversion" class="active">°C</a> | <a href="#" id="f-conversion">°F</a></span></h2>
           <div class="weather-details">
           <span id="day-zero-description">Cloudy</span>
           <br>
@@ -27,51 +27,37 @@
           Humidity: <span id="day-zero-humidity">50%</span>
           </div>
       </div>
-        <div class="row forecast">
+        <div class="row forecast" id="forecast">
           <div class="col day-plus-one">
-           <strong>Friday 11/19</strong> 
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-one-icon" height="50" />
+           <strong>Friday</strong> 
             <br />
-            62°F / 36°F
+           <span class="high-temp" id="day-plus-one-high-temp">10°C</span> | <span class="low-temp" id="day-plus-one-low-temp">7°C</span>
             <br />
-            ☀️
-            <br />
-            💧 0%
           </div>
           <div class="col day-plus-two">
-            <strong>Saturday 11/20</strong>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
+            <strong>Saturday</strong>
             <br />
-            56°F / 40°F
-            <br />
-            🌤️
-            <br />
-            💧 0%
+           <span class="high-temp" id="day-plus-two-high-temp">10°C</span> | <span class="low-temp" id="day-plus-two-low-temp">7°C</span>
           </div>
            <div class="col day-plus-three">
-            <strong>Sunday 11/21</strong>
+           <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
+            <strong>Sunday</strong>
             <br />
-            62°F / 44°F
-            <br />
-            ☁️
-            <br />
-            💧 10%
+            <span class="high-temp" id="day-plus-three-high-temp">10°C</span> | <span class="low-temp" id="day-plus-three-low-temp">7°C</span>
           </div>
            <div class="col day-plus-four">
-            <strong>Monday 11/22</strong>
+              <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
+            <strong>Monday</strong>
             <br />
-            62°F / 27°F
-            <br />
-            ☁️
-            <br />
-            💧 10%
+             <span class="high-temp" id="day-plus-four-high-temp">10°C</span> | <span class="low-temp" id="day-plus-four-low-temp">7°C</span>
           </div>
            <div class="col day-plus-five">
-            <strong>Tuesday 11/23</strong>
+            <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
+            <strong>Tuesday</strong>
             <br />
-            50°F / 28°F
-            <br />
-            ☀️
-            <br />
-            💧 0%
+             <span class="high-temp" id="day-plus-five-high-temp">10°C</span> | <span class="low-temp" id="day-plus-five-low-temp">7°C</span>
           </div>
         </div>
        <div class="refresh">
