--- a/index.html
+++ b/index.html
@@ -17,48 +17,17 @@
     <div class="container">
       <div class="heading">
         <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-zero-icon" />
-        <h1 id=city-name>Atlanta</h1>
-        <h2><span id = "day-zero-temperature">10</span><span class="unit-conversion"> <a href="#" id="c-conversion" class="active">°C</a> | <a href="#" id="f-conversion">°F</a></span></h2>
+        <h1 id=city-name>City</h1>
+        <h2><span id = "day-zero-temperature">0</span><span class="unit-conversion"> <a href="#" id="c-conversion" class="active">°C</a> | <a href="#" id="f-conversion">°F</a></span></h2>
           <div class="weather-details">
           <span id="day-zero-description">Cloudy</span>
           <br>
-          Wind: <span id="day-zero-wind-speed">1 km/h</span>
+          Wind: <span id="day-zero-wind-speed">0 km/h</span>
           <br>
-          Humidity: <span id="day-zero-humidity">50%</span>
+          Humidity: <span id="day-zero-humidity">0%</span>
           </div>
       </div>
         <div class="row forecast" id="forecast">
-          <div class="col day-plus-one">
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-one-icon" height="50" />
-           <strong>Friday</strong> 
-            <br />
-           <span class="high-temp" id="day-plus-one-high-temp">10°C</span> | <span class="low-temp" id="day-plus-one-low-temp">7°C</span>
-            <br />
-          </div>
-          <div class="col day-plus-two">
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
-            <strong>Saturday</strong>
-            <br />
-           <span class="high-temp" id="day-plus-two-high-temp">10°C</span> | <span class="low-temp" id="day-plus-two-low-temp">7°C</span>
-          </div>
-           <div class="col day-plus-three">
-           <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
-            <strong>Sunday</strong>
-            <br />
-            <span class="high-temp" id="day-plus-three-high-temp">10°C</span> | <span class="low-temp" id="day-plus-three-low-temp">7°C</span>
-          </div>
-           <div class="col day-plus-four">
-              <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
-            <strong>Monday</strong>
-            <br />
-             <span class="high-temp" id="day-plus-four-high-temp">10°C</span> | <span class="low-temp" id="day-plus-four-low-temp">7°C</span>
-          </div>
-           <div class="col day-plus-five">
-            <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-plus-two-icon" height="50" />
-            <strong>Tuesday</strong>
-            <br />
-             <span class="high-temp" id="day-plus-five-high-temp">10°C</span> | <span class="low-temp" id="day-plus-five-low-temp">7°C</span>
-          </div>
         </div>
        <div class="refresh">
     <form action="" class="change-city" id="change-city">
