--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="heading">
         <img src="https://openweathermap.org/img/wn/03d@2x.png" id="day-zero-icon" />
         <h1 id=city-name>City</h1>
-        <h2><span id = "day-zero-temperature">0</span><span class="unit-conversion"> <a href="#" id="f-conversion" class="active">°F</a> | <a href="#" id="c-conversion">°C</a> </span></h2>
+        <h2><span id = "day-zero-temperature">0</span><span id="unit-conversion"> <a href="#" id="f-conversion" class="active">°F</a><span class = "hidden" id = "hidden-text"> | <a href="#" id="c-conversion">°C</a> </span></h2>
           <div class="weather-details">
           <span id="day-zero-description">Cloudy</span>
           <br>
