--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
       <input type="text" placeholder="Enter a city" id="current-city" />
       <input type="submit" value="Refresh"/>
     </form>
-      <button class="geolocate-button">Current Location</button>
 </div>
-<p>
+<p class="last-updated">
    Last updated: <span id="current-date">Now</span>
       </p>
       <p class="open-source"><a href="https://github.com/nlparker25/weather-app">Open source code</a> by Nicole Parker</p>
